LegacyJpaOperations - before Optional